Github issue #372, [Pagination] - keep fixed pagination option displaying 5 pages. -- Updated the paginator to show maximum 5 pages in the list -- Found a bug with Tooltip component which is preventing the tooltip from being visible

--- a/src/components/Grid/GridView.scss
+++ b/src/components/Grid/GridView.scss
@@ -490,6 +490,13 @@
                     }
                 }
             }
+
+            &.go-to-page-pill {
+                .tooltip-target {
+                    min-width: 27px;
+                    height: 28px;
+                }
+            }
         }
         a {
             @include roboto;
